# badac

./: CMakeLists.txt  Makefile  README  bad2.ada  bada.cpp  bada.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  scoped_symbol_table.hpp  splaytree.hpp  test2.ada  test3.ada  test_parser  test_parser.cpp  test_scanner.cpp
doc/: BADA BNF and Parser Assn 2013.doc  parser_assignment.txt  parser_exprec.txt
doc/man/man1/: badac.1
examples/: primes.ada  sqrt.ada
src/: ci_string.hpp  main.cpp  parser.cpp  parser.hpp  scanner.hpp
tests/: AssignToConstantBoolean.ada  AssignToConstantInteger.ada  AssignToConstantReal.ada  BooleanRelOp.ada  ConstantDeclarationWithoutAssignment.ada  ExtraneousTrailingTokens.ada  NonBooleanIfCondition.ada  NonBooleanWhileCondition.ada  NonConstantDeclarationWithAssignment.ada  ProgramIdentifierMismatch.ada  ReadToConstantBoolean.ada  ReadToConstantInteger.ada  ReadToConstantReal.ada  TypeMismatchAddOp.ada  TypeMismatchAssignment.ada  TypeMismatchMulOp.ada  TypeMismatchNot.ada  TypeMismatchRelOp.ada  bad1.ada  bad3.ada  test1.ada  test2.ada  test4.ada  test_bad.ada  test_good.ada
